--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,6 @@ rootProject.name = 'Kazak.A-c32'
 include 'hometask2'
 include 'hometask6'
 include 'hometask7'
+include 'hometask8'
+include 'hometask9'
 
