--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,7 @@ include 'hometask10'
 include 'hometask11'
 include 'hometask12'
 include 'hometask13'
+include 'extraHometask1'
+include 'extraHometask2'
+include 'extraHometask3'
+
