--- a/hometask24/build.gradle
+++ b/hometask24/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group = 'org.example'
-version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -14,6 +14,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+    implementation 'com.mysql:mysql-connector-j:9.2.0'
 }
 
 test {
