--- a/hometask31/build.gradle
+++ b/hometask31/build.gradle
@@ -14,6 +14,13 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+    implementation 'com.mysql:mysql-connector-j:9.2.0'
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+    implementation 'org.hibernate:hibernate-core:7.0.2.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:9.0.1.Final'
+
 }
 
 test {
