--- a/hometask32/build.gradle
+++ b/hometask32/build.gradle
@@ -12,8 +12,12 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.hibernate:hibernate-core:7.0.2.Final'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    implementation 'org.mapstruct:mapstruct:1.6.3'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.1'
 }
 
 test {
