--- a/hometask36/build.gradle
+++ b/hometask36/build.gradle
@@ -10,10 +10,15 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
+    implementation 'com.mysql:mysql-connector-j:9.3.0'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    implementation 'org.springframework:spring-context:6.2.8'
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+    implementation 'org.hibernate.orm:hibernate-core:7.0.3.Final'
 }
 
 test {
