--- a/hometask36/build.gradle
+++ b/hometask36/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.6.3'
     implementation 'org.hibernate.orm:hibernate-core:7.0.4.Final'
     implementation 'org.postgresql:postgresql:42.7.7'
+    implementation 'org.reflections:reflections:0.10.2'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
