--- a/hometask36/build.gradle
+++ b/hometask36/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'org.hibernate.orm:hibernate-core:7.0.4.Final'
     implementation 'org.postgresql:postgresql:42.7.7'
     implementation 'org.reflections:reflections:0.10.2'
+    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
