--- a/hometask36/build.gradle
+++ b/hometask36/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group = 'org.example'
@@ -10,12 +11,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-context:6.2.8'
     implementation 'org.mapstruct:mapstruct:1.6.3'
     implementation 'org.hibernate.orm:hibernate-core:7.0.4.Final'
     implementation 'org.postgresql:postgresql:42.7.7'
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
+    implementation 'org.springframework:spring-webmvc:6.2.8'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
