--- a/hometask36/build.gradle
+++ b/hometask36/build.gradle
@@ -12,11 +12,16 @@ repositories {
 
 dependencies {
     implementation 'org.mapstruct:mapstruct:1.6.3'
-    implementation 'org.hibernate.orm:hibernate-core:7.0.4.Final'
     implementation 'org.postgresql:postgresql:42.7.7'
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
     implementation 'org.springframework:spring-webmvc:6.2.8'
+    implementation 'org.hibernate.orm:hibernate-core:7.0.4.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'
+    implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
+
+    runtimeOnly 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
